--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <li>
         <a href="./06 - Type Ahead/index-START.html">Day 6 - Type Ahead</a>
       </li>
+      <li>
+        <a href="./07 - Array Cardio Day 2/index-START.html">Day 7 - Array Cardio Day 2</a>
+      </li>
     </ol>
 
   </body>
