--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -28,13 +28,77 @@
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
 
+    // Plain JS
+    // var isAtLeastOneAdult = people.some(function(person) {
+    //   return (new Date().getFullYear() - person.year) > 18;
+    // })
+
+    // ES6
+    const isAtLeastOneAdult = people.some((person) => {
+      return (new Date().getFullYear() - person.year) > 18;
+    })
+
+    console.log({isAtLeastOneAdult});
+
+
+    // Plain JS
+    // var isEveryoneAdult = people.every(function(person) {
+    //   return (new Date().getFullYear() - person.year) > 18;
+    // })
+
+    // ES6
+    const isEveryoneAdult = people.every((person) => {
+      return (new Date().getFullYear() - person.year) > 18;
+    })
+
+    console.log({isEveryoneAdult});
+
+
+
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    // Plain JS
+    // var findCommentId823423 = comments.find(function(comment) {
+    //   return comment.id === 823423;
+    // })
+
+    // ES6
+    const findCommentId823423 = comments.find((comment) => {
+      return comment.id === 823423;
+    })
+
+    console.log(findCommentId823423);
+
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
+
+    // Plain JS
+    // var findCommentId823423Index = comments.findIndex(function(comment) {
+    //   return comment.id === 823423;
+    // })
+
+    // ES6
+    const findCommentId823423Index = comments.findIndex((comment) => {
+      return comment.id === 823423;
+    })
+
+    console.log({findCommentId823423Index});
+
     // delete the comment with the ID of 823423
+
+    // Method 1: Modified the original array
+    // comments.splice(findCommentId823423Index, 1);
+    // console.log(comments);
+
+    // Method 2: Create a new array without modified the original array
+     const newComments = [
+      ...comments.slice(0, findCommentId823423Index),
+      ...comments.slice(findCommentId823423Index + 1)
+     ]
+     console.log(newComments);
 
   </script>
 </body>
