--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <li>
         <a href="./07 - Array Cardio Day 2/index-START.html">Day 7 - Array Cardio Day 2</a>
       </li>
+      <li>
+        <a href="./08 - Fun with HTML5 Canvas/index-START.html">Day 8 - Fun with HTML5 Canvas</a>
+      </li>
     </ol>
 
   </body>
