--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,60 @@
     }
 
     // Regular
+    console.log('hello');
 
     // Interpolated
+    console.log('morning %s', 'developer');
 
     // Styled
+    console.log('%c' + 'Styling logging ', 'font-size:50px;color:red;');
 
     // warning!
+    console.warn('warn');
 
     // Error :|
+    console.error('error');
 
     // Info
+    console.info('info');
 
     // Testing
+    console.assert(1===2, 'logging if assert condition is false');
 
     // clearing
+    console.clear();
 
     // Viewing DOM Elements
+    const p = document.querySelector('p');
+    console.dir(p);
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.groupCollapsed(dog.name);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.groupEnd(dog.name);
+    });
 
     // counting
+    console.count('apple');
+    console.count('apple');
+    console.count('apple');
+    console.count('apple');
+    console.count('apple');
+    console.count('mango');
+    console.count('mango');
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/matz')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      });
+
+    console.table(dogs);
 
   </script>
 </body>
