--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       <li>
         <a href="./08 - Fun with HTML5 Canvas/index-START.html">Day 8 - Fun with HTML5 Canvas</a>
       </li>
+      <li>
+        <a href="./09 - Dev Tools Domination/index-START.html">Day 9 - Dev Tools Domination</a>
+      </li>
     </ol>
 
   </body>
