--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       <li>
         <a href="./09 - Dev Tools Domination/index-START.html">Day 9 - Dev Tools Domination</a>
       </li>
+      <li>
+        <a href="./10 - Hold Shift and Check Checkboxes/index-START.html">Day 10 - Hold Shift and Check Checkboxes</a>
+      </li>
     </ol>
 
   </body>
