--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
       <li>
         <a href="./10 - Hold Shift and Check Checkboxes/index-START.html">Day 10 - Hold Shift and Check Checkboxes</a>
       </li>
+      <li>
+        <a href="./11 - Custom Video Player/index.html">Day 11 - Custom Video </a>
+      </li>
     </ol>
 
   </body>
