--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
       <li>
         <a href="./11 - Custom Video Player/index.html">Day 11 - Custom Video </a>
       </li>
+      <li>
+        <a href="./12 - Key Sequence Detection/index-START.html">Day 12 - Key Sequence Detection</a>
+      </li>
+      <li>
+        <a href="./13 - Slide in on Scroll/index-START.html">Day 13 - Slide in on Scroll</a>
+      </li>
     </ol>
 
   </body>
