--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
       <li>
         <a href="./13 - Slide in on Scroll/index-START.html">Day 13 - Slide in on Scroll</a>
       </li>
+      <li>
+        <a href="./14 - JavaScript References VS Copying/index-START.html">Day 14 - JavaScript References VS Copying</a>
+      </li>
     </ol>
 
   </body>
