--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
       <li>
         <a href="./14 - JavaScript References VS Copying/index-START.html">Day 14 - JavaScript References VS Copying</a>
       </li>
+      <li>
+        <a href="./15 - LocalStorage/index-START.html">Day 15 - LocalStorage</a>
+      </li>
     </ol>
 
   </body>
