--- a/16 - Mouse Move Shadow/index-start.html
+++ b/16 - Mouse Move Shadow/index-start.html
@@ -35,6 +35,56 @@
   </style>
 
 <script>
+  const hero = document.querySelector('.hero');
+  const h1 = hero.querySelector('h1');
+
+  hero.addEventListener('mousemove', handleEffect);
+
+  function handleEffect (e) {
+
+    /*
+      Method 1
+      let x = e.offsetX;
+      let y = e.offsetY;
+
+      Method 2
+      let { offsetX: x, offsetY: y } = e;
+
+      Method 1 and 2 are equal
+    */
+    const { offsetWidth: width, offsetHeight: height } = hero;
+    let { offsetX: x, offsetY: y } = e;
+    const walk = 100;
+
+    /*
+      'this' refers to the element that attached an EventListener. 
+      'e.target' refers to an element that triggered by the EventListener.
+    */
+    if (this !== e.target) {
+      x = x + e.target.offsetLeft;
+      y = y + e.target.offsetTop;
+    }
+
+    /*
+      unchanged variables:
+      width, height, walk
+
+      changed variables:
+      x, y
+    */
+    const xWalk = Math.round((x / width * walk) - (walk / 2));
+    const yWalk = Math.round((y / height * walk) - (walk / 2));
+    
+    h1.style.textShadow = `
+      ${xWalk}px ${yWalk}px 0 rgba(255,0,0,0.7),
+      ${-xWalk}px ${yWalk}px 0 rgba(0,255,0,0.7),
+      ${yWalk}px ${-xWalk}px 0 rgba(0,0,255,0.7),
+      ${-yWalk}px ${xWalk}px 0 rgba(100,100,100,0.7)
+    `;
+
+    console.log(x,y,xWalk,yWalk);
+  }
+
 </script>
 </body>
 </html>
