--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
       <li>
         <a href="./15 - LocalStorage/index-START.html">Day 15 - LocalStorage</a>
       </li>
+      <li>
+        <a href="./16 - Mouse Move Shadow/index-START.html">Day 16 - Mouse Move Shadow</a>
+      </li>
+      <li>
+        <a href="./17 - Sort Without Articles/index-START.html">Day 17 - Sort Without Articles</a>
+      </li>
+
     </ol>
 
   </body>
