--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       <li>
         <a href="./17 - Sort Without Articles/index-START.html">Day 17 - Sort Without Articles</a>
       </li>
+      <li>
+        <a href="./18 - Adding Up Times with Reduce/index-START.html">Day 18 - Adding Up Times with Reduce</a>
+      </li>
 
     </ol>
 
