--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
       <li>
         <a href="./18 - Adding Up Times with Reduce/index-START.html">Day 18 - Adding Up Times with Reduce</a>
       </li>
+      <li>
+        <a href="./19 - Webcam Fun/index.html">Day 19 - Webcam Fun</a>
+      </li>
 
     </ol>
 
