--- a/20 - Speech Detection/index-START.html
+++ b/20 - Speech Detection/index-START.html
@@ -12,6 +12,44 @@
 <script>
   window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
+  const recognition = new SpeechRecognition();
+  // Interim results are results that are not yet final 
+  recognition.interimResults = true;
+
+  let p = document.createElement('p');
+  const words = document.querySelector('.words');
+  words.appendChild(p);
+
+  recognition.addEventListener('result', e => {
+    const transcript = Array.from(e.results)
+      .map(result => result[0])
+      .map(result => result.transcript)
+      .join('');
+
+      p.textContent = transcript;
+
+      if (e.results[0].isFinal) {
+        p = document.createElement('p');
+        words.appendChild(p)
+      }
+
+      if(transcript.includes('unicorn')) {
+        console.log('🦄');
+      }
+
+      if(transcript.includes('elephant')) {
+        console.log('🐘');
+      }
+
+      if(transcript.includes('dolphin')) {
+        console.log('🐬');
+      }
+    
+  })
+
+  recognition.addEventListener('end', recognition.start);
+
+  recognition.start();
 
 </script>
 
