--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
       <li>
         <a href="./19 - Webcam Fun/index.html">Day 19 - Webcam Fun</a>
       </li>
+      <li>
+        <a href="./20 - Speech Detection/index-START.html">Day 20 - Speech Detection</a>
+      </li>
+      <li>
+        <a href="./21 - Geolocation/index-START.html">Day 21 - Geolocation</a>
+      </li>
 
     </ol>
 
