--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
       <li>
         <a href="./21 - Geolocation/index-START.html">Day 21 - Geolocation</a>
       </li>
+      <li>
+        <a href="./22 - Follow Along Link Highlighter/index-START.html">Day 22 - Follow Along Link Highlighter</a>
+      </li>
 
     </ol>
 
