--- a/23 - Speech Synthesis/index-START.html
+++ b/23 - Speech Synthesis/index-START.html
@@ -35,6 +35,47 @@
   const options = document.querySelectorAll('[type="range"], [name="text"]');
   const speakButton = document.querySelector('#speak');
   const stopButton = document.querySelector('#stop');
+  
+  msg.text = document.querySelector('[name="text"]').value;
+
+  function populateOptionValues() {
+    voices = this.getVoices();
+    voicesDropdown.innerHTML = voices
+      .filter(el => { 
+        return el.lang.indexOf('en') > -1
+       })
+      .map(el => {
+        return `<option value="${el.name}">${el.name} (${el.lang})</option>`
+      }).join('');
+  }
+
+  function setVoice() {
+    msg.voice = voices.find(el => {
+      return el.name === this.value;
+    })
+    toggleVoice();
+  }
+
+  function toggleVoice(startOver = true) {
+    speechSynthesis.cancel();
+    if (startOver) {
+      speechSynthesis.speak(msg)
+    }
+  }
+
+  function setOption() {
+    msg[this.name] = this.value;
+    toggleVoice();
+  }
+
+  speechSynthesis.addEventListener('voiceschanged', populateOptionValues);
+  voicesDropdown.addEventListener('change', setVoice);
+  options.forEach(option => {
+    option.addEventListener('change', setOption);
+  })
+  speakButton.addEventListener('click', toggleVoice);
+  stopButton.addEventListener('click', () => toggleVoice(false));
+  
 </script>
 
 </body>
