--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
       <li>
         <a href="./22 - Follow Along Link Highlighter/index-START.html">Day 22 - Follow Along Link Highlighter</a>
       </li>
+      <li>
+        <a href="./23 - Speech Synthesis/index-START.html">Day 23 - Speech Synthesis</a>
+      </li>
 
     </ol>
 
