--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
       <li>
         <a href="./23 - Speech Synthesis/index-START.html">Day 23 - Speech Synthesis</a>
       </li>
+      <li>
+        <a href="./24 - Sticky Nav/index-START.html">Day 24 - Sticky Nav</a>
+      </li>
 
     </ol>
 
