--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
       <li>
         <a href="./24 - Sticky Nav/index-START.html">Day 24 - Sticky Nav</a>
       </li>
+      <li>
+        <a href="./25 - Event Capture, Propagation, Bubbling and Once/index-START.html">Day 25 - Event Capture, Propagation, Bubbling and Once</a>
+      </li>
 
     </ol>
 
