--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
       <li>
         <a href="./25 - Event Capture, Propagation, Bubbling and Once/index-START.html">Day 25 - Event Capture, Propagation, Bubbling and Once</a>
       </li>
+      <li>
+        <a href="./26 - Stripe Follow Along Nav/index-START.html">Day 26 - Stripe Follow Along Nav</a>
+      </li>
 
     </ol>
 
