--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
       <li>
         <a href="./26 - Stripe Follow Along Nav/index-START.html">Day 26 - Stripe Follow Along Nav</a>
       </li>
+      <li>
+        <a href="./27 - Click and Drag/index-START.html">Day 27 - Click and Drag</a>
+      </li>
 
     </ol>
 
