--- a/28 - Video Speed Controller/index-START.html
+++ b/28 - Video Speed Controller/index-START.html
@@ -6,15 +6,32 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  
   <div class="wrapper">
-    <video class="flex" width="765" height="430" src="https://www.dropbox.com/s/nf6jfkwck1glsyo/12%20-%20flex-wrapping-and-columns.mp4?dl=1" loop controls></video>
+    <video class="flex" width="765" height="430" src="https://media.istockphoto.com/videos/cute-chowchow-puppy-video-id487902707" loop controls></video>
     <div class="speed">
       <div class="speed-bar">1×</div>
     </div>
   </div>
 
 <script>
+  const speed = document.querySelector('.speed');
+  const bar = speed.querySelector('.speed-bar');
+  const video = document.querySelector('.flex');
+
+  function handleMove(e) {
+    const y = e.pageY - this.offsetTop;
+    const percent = y / this.offsetHeight;
+    const speedMin = 0.4;
+    const speedMax = 4;
+    const cssHeight = `${Math.round(percent * 100)}%`;
+    const playbackRate = percent * (speedMax - speedMin) + 0.4;
+    bar.style.height = cssHeight;
+    bar.textContent = `${playbackRate.toFixed(2)} x`;
+    video.playbackRate = playbackRate;
+  }
+
+  speed.addEventListener('mousemove', handleMove);
 </script>
 </body>
 </html>
