--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
       <li>
         <a href="./27 - Click and Drag/index-START.html">Day 27 - Click and Drag</a>
       </li>
+      <li>
+        <a href="./28 - Video Speed Controller/index-START.html">Day 27 - Video Speed Controller</a>
+      </li>
 
     </ol>
 
