--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
         <a href="./27 - Click and Drag/index-START.html">Day 27 - Click and Drag</a>
       </li>
       <li>
-        <a href="./28 - Video Speed Controller/index-START.html">Day 27 - Video Speed Controller</a>
+        <a href="./28 - Video Speed Controller/index-START.html">Day 28 - Video Speed Controller</a>
       </li>
-
+      <li>
+        <a href="./29 - Countdown Timer/index.html">Day 29 - Countdown Timer</a>
+      </li>
     </ol>
 
   </body>
