--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
       <li>
         <a href="./29 - Countdown Timer/index.html">Day 29 - Countdown Timer</a>
       </li>
+      <li>
+        <a href="./30 - Whack A Mole/index-START.html">Day 30 - Whack A Mole</a>
+      </li>
     </ol>
 
   </body>
